# HelloLM_study

./: .gitignore  a.py  pyproject.toml
HelloLM/: config.py
HelloLM/data/: dataset.py  loader.py  tokenizer.py
HelloLM/model/: model.py
HelloLM/model/architecture/: transformer.py
HelloLM/model/layers/: activation.py  attention.py  feedforward.py  normalize.py
HelloLM/scripts/: train.py
HelloLM/utils/: logger.py  path.py  tools.py
hellolm/scripts/preprocess/: plain_single.py
hellolm/utils/: logger.py  tools.py
